feat(esm): move to ESM in this module and in the configurations it generates
BREAKING CHANGE: You will have to be careful about file extensions - cjs/cts vs. js/ts

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ Thumbs.db
 .npmignore
 tsconfig.json
 tsconfig.build.json
-jest.config.js
-.prettierrc.js
-.eslintrc.js
+.commitlintrc.json
+jest.config.cjs
+.prettierrc.cjs
+.eslintrc.cjs
