--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -33,7 +33,10 @@ jobs:
       - run: yarn install --immutable
       - run: yarn build
 
-      - run: npm publish --access public
+      - name: Release
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
-
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        run: |
+          npm whoami
+          yarn dlx semantic-release
