--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@openapi-typescript-infra/coconfig",
-  "version": "1.0.1",
+  "version": "0.0.0",
   "description": "Default Node.js configuration files for openapi-typescript-infra projects",
-  "main": "build/index.js",
+  "main": "./build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
     "test": "jest",
@@ -12,7 +12,8 @@
     "lint": "eslint .",
     "prepack": "pinst --disable",
     "postpack": "pinst --enable",
-    "postinstall": "husky install && coconfig"
+    "postinstall": "husky install && coconfig",
+    "semantic-release": "semantic-release"
   },
   "engines": {
     "node": ">12.0.0"
@@ -21,7 +22,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/openapi-typescript-infra/coconfig.git"
+    "url": "https://github.com/openapi-typescript-infra/coconfig.git"
   },
   "keywords": [
     "typescript",
@@ -30,7 +31,12 @@
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": "yarn eslint --cache --fix"
   },
+  "release": {
+    "branches": ["main"]
+  },
   "devDependencies": {
+    "@commitlint/cli": "^17.6.3",
+    "@commitlint/config-conventional": "^17.6.3",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.16.14",
     "@typescript-eslint/eslint-plugin": "^5.59.7",
@@ -44,6 +50,7 @@
     "jest": "^29.5.0",
     "lint-staged": "^13.2.2",
     "pinst": "^3.0.0",
+    "semantic-release": "^21.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
