--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "*.{js,jsx,ts,tsx}": "yarn eslint --cache --fix"
   },
   "release": {
-    "branches": ["main"]
+    "branches": [
+      "main"
+    ]
   },
   "devDependencies": {
     "@commitlint/cli": "^17.6.3",
@@ -52,6 +54,7 @@
     "pinst": "^3.0.0",
     "semantic-release": "^21.0.2",
     "ts-jest": "^29.1.0",
+    "ts-jest-resolver": "^2.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
