--- a/package.json
+++ b/package.json
@@ -5,14 +5,11 @@
   "main": "./build/index.js",
   "types": "build/index.d.ts",
   "scripts": {
-    "test": "jest",
+    "test": "vitest",
     "build": "tsc -p tsconfig.build.json",
     "clean": "yarn dlx rimraf ./build",
-    "prepare": "husky install",
     "lint": "eslint .",
-    "prepack": "pinst --disable",
-    "postpack": "pinst --enable",
-    "postinstall": "husky install && coconfig",
+    "postinstall": "coconfig",
     "semantic-release": "semantic-release"
   },
   "engines": {
@@ -28,9 +25,6 @@
     "typescript",
     "openapi"
   ],
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": "yarn eslint --cache --fix"
-  },
   "release": {
     "branches": [
       "main"
@@ -39,6 +33,10 @@
   "devDependencies": {
     "@commitlint/cli": "^17.6.7",
     "@commitlint/config-conventional": "^17.6.7",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/commit-analyzer": "^10.0.1",
+    "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/release-notes-generator": "^11.0.4",
     "@types/jest": "^29.5.3",
     "@types/node": "^18.17.1",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
@@ -47,16 +45,11 @@
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.9.0",
     "eslint-plugin-import": "^2.28.0",
-    "eslint-plugin-jest": "^27.2.3",
-    "husky": "^8.0.3",
-    "jest": "^29.6.2",
-    "lint-staged": "^13.2.3",
     "pinst": "^3.0.0",
     "semantic-release": "^21.0.7",
-    "ts-jest": "^29.1.1",
-    "ts-jest-resolver": "^2.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.34.2"
   },
   "packageManager": "yarn@3.2.4"
 }
