--- a/.github/workflows/npm_publish.yml
+++ b/.github/workflows/npm_publish.yml
@@ -19,7 +19,6 @@ jobs:
       - run: yarn lint
       - run: yarn test
 
-
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -38,4 +37,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          yarn dlx semantic-release
+          yarn semantic-release
