--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "tsc -p tsconfig.build.json",
     "clean": "yarn dlx rimraf ./build",
     "lint": "eslint .",
-    "postinstall": "coconfig",
-    "semantic-release": "semantic-release"
+    "postinstall": "coconfig"
   },
   "engines": {
     "node": ">12.0.0"
@@ -28,21 +27,21 @@
   "release": {
     "branches": [
       "main"
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      "@semantic-release/changelog",
+      [
+        "@semantic-release/exec",
+        {
+          "publishCmd": "yarn dlx pinst --disable"
+        }
+      ],
+      "@semantic-release/npm",
+      "@semantic-release/git"
     ]
   },
-  "plugins": [
-    "@semantic-release/commit-analyzer",
-    "@semantic-release/release-notes-generator",
-    "@semantic-release/changelog",
-    [
-      "@semantic-release/exec",
-      {
-        "publishCmd": "yarn dlx pinst --disable"
-      }
-    ],
-    "@semantic-release/npm",
-    "@semantic-release/git"
-  ],
   "devDependencies": {
     "@commitlint/cli": "^17.7.1",
     "@commitlint/config-conventional": "^17.7.0",
