--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^10.0.1",
     "@semantic-release/exec": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
     "@semantic-release/release-notes-generator": "^11.0.4",
     "@types/jest": "^29.5.3",
     "@types/node": "^18.17.5",
